# finance_api

./: pyproject.toml
StripeSubscription/: apps.py  urls.py  viewSet.py
StripeUpdatePlan/: apps.py  urls.py  viewSet.py
finance_api/: asgi.py  settings.py  urls.py  wsgi.py
paymentPlan/: urls.py  viewSet.py
registerUser/: apps.py  serializers.py  urls.py  viewSet.py
transactions/: admin.py  models.py  serializers.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_transaction_id.py  0003_transaction_user.py
transactions/viewSet/: metrics.py  viewset.py
user/: serializers.py  urls.py  viewSet.py
userPlan/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
userPlan/migrations/: 0001_initial.py
